--- a/public/output.css
+++ b/public/output.css
@@ -587,6 +587,11 @@ video {
   margin-right: auto;
 }
 
+.my-2 {
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+}
+
 .mb-2 {
   margin-bottom: 0.5rem;
 }
@@ -611,10 +616,6 @@ video {
   display: grid;
 }
 
-.hidden {
-  display: none;
-}
-
 .h-24 {
   height: 6rem;
 }
@@ -623,16 +624,16 @@ video {
   height: 1rem;
 }
 
-.h-48 {
-  height: 12rem;
-}
-
 .h-64 {
   height: 16rem;
 }
 
 .h-screen {
   height: 100vh;
+}
+
+.min-h-20 {
+  min-height: 5rem;
 }
 
 .min-h-\[100vh\] {
@@ -653,6 +654,10 @@ video {
 
 .w-24 {
   width: 6rem;
+}
+
+.w-44 {
+  width: 11rem;
 }
 
 .w-full {
@@ -733,6 +738,15 @@ video {
   border-width: 1px;
 }
 
+.border-2 {
+  border-width: 2px;
+}
+
+.border-gray-200 {
+  --tw-border-opacity: 1;
+  border-color: rgb(229 231 235 / var(--tw-border-opacity));
+}
+
 .bg-black {
   --tw-bg-opacity: 1;
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
@@ -753,6 +767,10 @@ video {
   background-color: rgb(220 38 38 / var(--tw-bg-opacity));
 }
 
+.bg-transparent {
+  background-color: transparent;
+}
+
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
@@ -760,11 +778,6 @@ video {
 
 .bg-opacity-50 {
   --tw-bg-opacity: 0.5;
-}
-
-.object-cover {
-  -o-object-fit: cover;
-     object-fit: cover;
 }
 
 .p-2 {
@@ -779,6 +792,11 @@ video {
   padding: 1.5rem;
 }
 
+.px-1 {
+  padding-left: 0.25rem;
+  padding-right: 0.25rem;
+}
+
 .px-4 {
   padding-left: 1rem;
   padding-right: 1rem;
@@ -787,6 +805,14 @@ video {
 .py-2 {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
+}
+
+.pb-4 {
+  padding-bottom: 1rem;
+}
+
+.pt-8 {
+  padding-top: 2rem;
 }
 
 .text-center {
@@ -820,16 +846,17 @@ video {
   font-weight: 700;
 }
 
-.font-semibold {
-  font-weight: 600;
-}
-
 .leading-tight {
   line-height: 1.25;
 }
 
 .tracking-tight {
   letter-spacing: -0.025em;
+}
+
+.text-black {
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 
 .text-gray-700 {
@@ -864,6 +891,54 @@ video {
 
 .duration-300 {
   transition-duration: 300ms;
+}
+
+.loader {
+  width: 50px;
+  height: 22.5px;
+  position: relative;
+}
+
+.loader:before,
+.loader:after {
+  content: "";
+  position: absolute;
+  inset: 0;
+  background: #000;
+  box-shadow: 0 0 0 50px;
+  clip-path: polygon(
+        -50px -20px,
+        10% -12px,
+        20% 0,
+        calc(50% - 15px) 0,
+        calc(50% - 10px) -20px,
+        calc(50% - 8px) -15px,
+        calc(50% + 8px) -15px,
+        calc(50% + 10px) -20px,
+        calc(50% + 15px) 0,
+        80% 0,
+        90% -12px,
+        calc(100% + 50px) -20px,
+        100% 80%,
+        calc(100% + 10px) calc(100% + 10px),
+        60% 100%,
+        50% calc(100% + 15px),
+        40% 100%,
+        -10px calc(100% + 10px),
+        0 80%
+    );
+}
+
+.loader:after {
+  animation: l9 1s infinite;
+  transform: perspective(300px) translateZ(0px);
+}
+
+@keyframes l9 {
+  to {
+    transform: perspective(300px) translateZ(100px);
+    opacity: 0;
+  }
 }
 
 .hover\:bg-gray-100:hover {
