--- a/src/assets/styles/test.css
+++ b/src/assets/styles/test.css
@@ -3,6 +3,7 @@ body {
         Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
     background-color: #f6f8fa;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     height: 100vh;
