feature:created auth system

--- a/src/assets/styles/style.css
+++ b/src/assets/styles/style.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+.dropdown:hover .dropdown-options {
+  display: block;
+}
+
 .loader {
     width: 50px;
     height: 22.5px;
